UAS Web menggunakan python V2.1

--- a/sign-up/index.html
+++ b/sign-up/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="login">
-        <form action="register.php" method="POST" class="login-form">
+        <form action="../function_php/register.php" method="POST" class="login-form">
             <div class="logo">
                 <img src="img/logo.png" alt="">
                 <h3>PlotPool</h3>
