--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- <script src="script.js"></script> -->
     <div class="login">
-        <form action="login.php" method="POST" class="login-form">
+        <form action="function_php/login.php" method="POST" class="login-form">
             <div class="logo">
                 <img src="img/logo.png" alt="">
                 <h3>PlotPool</h3>
