UAS Web menggunakan PHP V2.3

--- a/about-developers-page/index.html
+++ b/about-developers-page/index.html
@@ -73,19 +73,19 @@
             <div class="box-list-anggota">
                 <div class="list-anggota">
                     <div class="anggota">
-                        <img src="img/albert.jpg" alt="" class="anggota-img">
+                        <img src="img/ABRET.jpeg" alt="" class="anggota-img">
                         <span class="nama-anggota">Ananda Albert Mangiri</span>
                         <p class="deskripsi-anggota">NIM : 210211060122</p>
                     </div>
 
                     <div class="anggota">
-                        <img src="img/faithful.jpeg" alt="" class="anggota-img">
+                        <img src="img/IPPUL.jpg" alt="" class="anggota-img">
                         <span class="nama-anggota">Faithful Miracle A.Mandagi</span>
                         <p class="deskripsi-anggota">NIM : 210211060080</p>
                     </div>
 
                     <div class="anggota">
-                        <img src="img/xavier.jpg" alt="" class="anggota-img">
+                        <img src="img/PIEL.jpeg" alt="" class="anggota-img">
                         <span class="nama-anggota">Francis Xavier Abraham Harahap</span>
                         <p class="deskripsi-anggota">NIM : 210211060276</p>
                     </div>
